src/test/run-pass/unique-fn-ret.rs
fn f() -> ~int {
    ~100
}

fn main() {
    assert f() == ~100;
}